WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240089
Fix crash in RemoteRenderingBackendProxy::prepareBuffersForDisplay()
https://bugs.webkit.org/show_bug.cgi?id=240089
Summary
Fix crash in RemoteRenderingBackendProxy::prepareBuffersForDisplay()
Simon Fraser (smfr)
Reported
2022-05-04 15:42:30 PDT
Fix crash in RemoteRenderingBackendProxy::prepareBuffersForDisplay()
Attachments
Patch
(3.85 KB, patch)
2022-05-04 15:45 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-05-04 15:45:32 PDT
Created
attachment 458832
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-05-04 15:45:35 PDT
<
rdar://problem/91444900
>
EWS
Comment 3
2022-05-04 19:48:40 PDT
Committed
r293815
(
250288@main
): <
https://commits.webkit.org/250288@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458832
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug