Fix crash in RemoteRenderingBackendProxy::prepareBuffersForDisplay() https://bugs.webkit.org/show_bug.cgi?id=240089 <rdar://91444900>

Reviewed by Tim Horton.

We keep WebContent processes alive after a GPU Process crash, so having a RELEASE_ASSERT
when IPC with the GPU Process fails is the wrong approach. Instead, just behave as if all
the returned buffers are null, and need full display.

In testing, I saw a single instance of a crash in RemoteLayerBackingStore::drawInContext(),
probably because m_backBuffer.imageBuffer was null.
SwapBuffersDisplayRequirement::NeedsFullDisplay should mean that we don't hit this, but
null-check the back buffer just in case.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::drawInContext):
* WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::prepareBuffersForDisplay):

Canonical link: https://commits.webkit.org/250288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293815 268f45cc-cd09-0410-ab3c-d52691b4dbfc